      nasty pkg-lists/kernel_specific technique since we lack dependency
      resolution in pkg-lists.
    - Go back to pulling udebs from unstable when building official images.
    - Produce a single hd-media boot image that includes both kernels.
    - Parameterise filenames and paths in the syslinux.cfg files so that
      files can have different names or locations.
  * Joshua Kwan
    - Fix sparc64 CDs for good. I think.
    - Change netcfg/use_dhcp to netcfg/disable_dhcp in manual.
  * Steve Langasek
    - Add shaped Arabic characters to the needed-characters set
    - Bump kernelversion to 2.4.26 for alpha
    - Add libfribidi0-udeb to the package list for everything except floppy
    - Add mideast-root floppy flavor and split languages for bidi support
  * Goswin von Brederlow
    - Update amd64 kernel version, and input-modules are now compiled in.
      Closes: #253536
  * Martin Michlmayr
    - Start Cobalt netboot install via NFS instead of TFTP.
  * Thiemo Seufer
    - Use 2.4.26 kernels for mips, mipsel.
  * Bastian Blank
    - Use 2.4.26 for s390.
    - Add network-console on s390.
  * Kurt Roeckx
    - Update kernel version for amd64 to 2.6.7-3 and use input-modules again.

 -- Bastian Blank <waldi@debian.org>  Tue, 29 Jun 2004 10:15:43 +0200

debian-installer (20040528) unstable; urgency=low

  * Martin Michlmayr
    - Include bogl-bterm-udeb on the arm netboot image again.
  * Colin Watson
    - Add fs-common-modules to powerpc 2.6 initrds; isofs.ko needs it.

 -- Joey Hess <joeyh@debian.org>  Fri, 28 May 2004 17:52:25 -0400

debian-installer (20040527) unstable; urgency=low

  * Colin Watson
    - Bump powerpc 2.6 kernels to 2.6.6.
    - Add pcmcia-cs, pcmcia-modules, and pcmcia-storage-modules to the
      powerpc cdrom initrd so that hw-detect finds my wireless network card.
    - Add powerpc, power3, power4, and g5 2.6 cdrom images.
    - Move yaboot up from /install/powermac/ to /install/, in line with
      debian-cd.
  * Kurt Roeckx