@@ -2,10 +2,12 @@ FLAVOUR_SUPPORTED = "" 2.6
 
 MEDIA_TYPE = netboot image
 
-TARGET = $(INITRD) $(KERNEL) $(MINIISO)
+TARGET = $(INITRD) $(KERNEL) $(PXE_BOOT) $(MINIISO)
 EXTRANAME = $(MEDIUM)/
+
+BOOT_SCREEN_DIR = "debian-installer/boot-screens/"
 
 MANIFEST-INITRD = "netboot initrd"
 MANIFEST-KERNEL = "kernel image to netboot"
 MANIFEST-MINIISO = "tiny CD image that boots the netboot installer"
-
+MANIFEST-PXE_BOOT = "tarball for PXE booting from tftp server"
